--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,9 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+
+    /*Custom Colors*/
+    --pink-1: #fc4d6d;
   }
 }
 
